utils/styles/main.scss
/* ... */
#insta-stories {
  > :first-child {
    > :first-child {
      border-radius: 52px;
      height: 360px !important;
      background: none !important;
      > :first-child {
        bottom: -7.3rem;
        filter: none;
        div {
          height: 4px !important;
          border-radius: 2px;
        }
      }
    }
  }

  img {
    border-radius: 52px;
  }
}

.blackBackground {
  background-color: #000;
  background-repeat: no-repeat;
  min-height: 100vh;
  width: 100%;
  z-index: -1;
}

.teamsJobs {
  background: linear-gradient(to bottom, #000 10rem, #fff 10rem);
  @media screen and (max-width: 576px) {
    background: linear-gradient(to bottom, #000 7rem, #fff 7rem);
  }
  .full-height {
    min-height: auto;
  }
}

.yellow-bg-gradient {
  background: #f7ce55 -webkit-gradient(linear, left top, left bottom, color-stop(50%, rgba(255, 255, 255, 0)), to(#e18700));
  background: #f7ce55 linear-gradient(to bottom, rgba(255, 255, 255, 0) 50%, #e18700);
  background-repeat: no-repeat;
  position: absolute;
  top: 0;
  left: 0;
  height: 120vh;
  width: 100%;
  z-index: -1;
}
@media screen and (max-width: 2000px) {
  .yellow-bg-gradient {
    background: #f7ce55 linear-gradient(to bottom, rgba(255, 255, 255, 0) 75%, #e18700);
  }
}
@media screen and (min-width: 1920px) {
  .yellow-bg-gradient {
    height: 80vh;
  }
  // .full-height {
  //   min-height: 60vh;
  // }
}
// @media screen and (max-width: 576px) {
//   .yellow-bg-gradient {
//     height: 80vh;
//   }
// }

.xs-listings {
  .header {
    font-size: 2.25rem;
  }
  .odd {
    background-color: rgba(242, 242, 242, 0.81);
  }
  .title {
    color: #101010 !important;
    font-family: $title-font;
  }
  .sub-title {
    color: #848484;
  }
}

.listings,
.xs-listings {
  .text-green {
    &:focus {
      border: none !important;
      box-shadow: none !important;
    }
  }
}

.mobile-search {
  min-height: 100vh;
  .header {
    font-size: 1.125rem;
    font-family: $header-font;
  }

  .results,
  .btn-success {
    background-color: #00aa13 !important;
  }
}

.filter-badge {
  font-size: $font-s;
  border-radius: 8px;
  background-color: #fbf0d7;
  &:hover {
    background-color: #cdc3ad;
  }
}

.clearIcon,
.pointer {
  cursor: pointer;
}

.jobCard {
  color: #696969;
  &:hover {
    background-color: #eee !important;
    color: #242424;
  }
}
.form-control {
  padding: 1rem;
  height: inherit;
  border: none;
  font-family: $navbar-font, 'Font Awesome 5 Free';
  font-size: 0.875rem;
  line-height: normal;
}
.subscribe-whatsapp {
  .form-control {
    color: #fff !important;
  }
}

.select__control {
  border: none !important;
  border-radius: 50rem !important;
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
  padding: 0.6rem;
  &:hover {
    border: none !important;
  }

  &:focus {
    border: none !important;
  }
}

.select__menu {
  scrollbar-width: 1px;
  margin-top: 0;
  padding: 1rem 0.3rem;
  border-radius: 2rem !important;
  border-bottom-left-radius: 2rem !important;
  border-bottom-right-radius: 2rem !important;

  .select__menu-list {
    &::-webkit-scrollbar {
      width: 2px;
    }

    &::-webkit-scrollbar-thumb {
      background: #9e9e9e;
      border-radius: 10px;
    }
  }
}

#departments {
  .departments {
    padding-top: 5rem;

    .header {
      font-size: 2.6rem;
    }

    @media screen and (max-width: 576px) {
      .header {
        font-size: 2.25rem;
      }
      .head {
        font-size: 1.5rem;
      }
    }
    .header-heigh {
      color: $green-light;
    }
    .department {
      &:last-child {
        margin-top: 10px;
      }
    }
  }
  .card-columns {
    column-count: 2;
    column-gap: 2.5rem;
    @media screen and (max-width: $sm-break) {
      column-count: 1;
      column-gap: 1rem;
    }
    .card {
      border: none;
      border-radius: $border-xl;
      padding: 1.5rem 2rem;
      min-height: 15rem;
      margin-bottom: 1.875rem;
      position: relative;
      text-decoration: none;

      &.highlight {
        height: 32rem;
        // margin-bottom: 1.25rem;
        @media screen and (max-width: 576px) {
          // height: 19rem;
          .header {
            height: 20rem;
          }
        }

        .card-body {
          position: absolute;
          bottom: 0;
        }
      }

      .header {
        max-width: 384px;
        // font-size: 2.6rem;
      }
      @media screen and (max-width: $md-break) {
        .header {
          font-size: $font-m;
        }
      }

      .sub-head {
        font-family: $navbar-font;
        font-size: $font-m;
      }
    }

    .department0 {
      background-color: #00aa13;
    }
    .department1 {
      background-color: #ff7f32;
    }
    .department2 {
      background-color: #ff808b;
    }
    .department3 {
      background-color: #7ccc6c;
    }
    .department4 {
      background-color: #d48bc8;
    }
    .department5 {
      background-color: #32ebe1;
    }
  }
}

#teams {
  .card {
    min-height: 20rem;
    border: none;
    outline: none !important;
    border-radius: $border-xl;
    min-height: 430px;
  }

  .slick-next {
    right: 3.2rem;
  }

  .locationPadding {
    color: #515151;
  }
  @media screen and (max-width: 576px) {
    min-height: auto;
    .slick-next,
    .slick-prev {
      display: none !important;
    }
    .slick-list {
      padding-left: 30px !important;
    }
  }
  @media screen and (min-width: $lg-break) {
    .slick-prev {
      display: none !important;
    }
  }

  @media screen and (min-width: $xl-break) {
    .slick-slider {
      margin-left: 16rem;
    }
    .slick-list {
      padding-right: 100px !important;
      padding-left: 0px !important;
    }
  }

  @media screen and (min-width: 2000px) {
    .slick-slider {
      width: 1140px;
      margin: auto;
    }
  }
}

.teams-banner {
  .heading {
    font-size: 30px;
  }
}

.team-blogs {
  .slick-next,
  .slick-prev {
    display: none !important;
  }
}
/* ... */

